--- a/src/containers/customer/index.scss
+++ b/src/containers/customer/index.scss
@@ -1,64 +1,20 @@
-.group-user {
-  margin-top: 24px;
-  .group-search {
-    width: 96%;
-    position: relative;
-    left: 2%;
-    .ant-form-item-control {
-      line-height: 30px;
-    }
-    .item-idCard {
-      .ant-select {
-        width: 32%;
-      }
-      input {
-        width: 68%;
-      }
-    }
+.clubber {
+  height: inherit;
+  margin-left: 10px;
+  .search {
+    background: #fff;
+    border-radius: 5px;
+    padding: 20px 10px;
+    margin-bottom: 10px;
   }
-  .group-search-operate {
-    .group-search-button {
-      position: relative;
-      left: 2%;
-      width: 96%;
-      button {
-        margin-right: 20px;
-      }
+  .content {
+    border-radius: 5px;
+    padding: 10px;
+    background: #fff;
+    .amy-table {
+      width: 94%;
+      margin: 0 auto;
+      padding-top: 20px;
     }
-  }
-  .group-table {
-    width: 96%;
-    position: relative;
-    left: 2%;
-    margin-bottom: 20px;
-    .group-table-operate {
-      margin-bottom: 20px;
-    }
-    .table-operate-item {
-      margin-right: 10px;
-    }
-  }
-}
-.org-change-operate {
-  .ant-select {
-    width: 100%;
-  }
-}
-.custom-filter-dropdown {
-  padding: 8px;
-  border-radius: 6px;
-  background: #fff;
-  box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
-}
-.custom-filter-dropdown input {
-  width: 130px;
-  margin-right: 8px;
-}
-.highlight {
-  color: #f50;
-}
-.table-calendar {
-  .ant-select-sm {
-    width: 30%;
   }
 }
