--- a/src/containers/menu/index.scss
+++ b/src/containers/menu/index.scss
@@ -11,6 +11,8 @@
     padding-left: 0px!important;
     left: 0px;
     margin-left: 0px;
+    margin: 0px;
+    margin-bottom: 0px!important;
   }
   .ant-menu-item-selected:after {
     content: none;
