--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -49,6 +49,11 @@ html , body {
           margin-left: 10px;
           background-color: #ecf6fd;
           margin-bottom: 10px;
+          cursor: pointer;
+        }
+        .ant-card:hover {
+          box-shadow: 0 1px 6px rgba(0,0,0,.2);
+          border-color: rgba(0,0,0,.2);
         }
         .ant-card-body {
           padding: 0px;
